syntax = "proto3";

package testDb;

option go_package = ".";


message order_req {
  int64 user_id = 1;
  int64 order_receive_mes_id = 2;
  repeated order_detail_res details = 3;
  float payment = 4;
  int64 payment_type = 5;
  int64 postage = 6;
}

message id {
  int64 id = 1 ;
}

message order_receive {
  string receiver_name = 1;
  string receiver_phone = 2;
  string receiver_province = 3;
  string receiver_city = 4;
  string receiver_district = 5;
  string receiver_address = 6;
}

message order_detail_res {
  int64 product_id = 1;
  float current_unit_price = 2;
  int64 product_quantity = 3;
  float total_price = 4;
  string created_at = 5;
  string product_name = 6;
}

message whole_order {
  int64  id = 1;
  int64  user_id = 2;
  repeated  order_detail_res details = 3;
  order_receive receive_mes = 4;
  float payment = 5;
  int64 payment_type = 6;
  int64 postage = 7;
}

message user_order_all {
  int64 id = 1;
  string user_name = 2;
  repeated whole_order orders = 3;
}

service order_service {
  rpc post_order_mes(order_req) returns (whole_order);
  rpc get_order(id)   returns(whole_order);
  rpc get_user_order(id)   returns(user_order_all);
}